--- a/index4.html
+++ b/index4.html
@@ -4,7 +4,7 @@
 <title>Welcome to my TEST Website Number4</title>
 <style>
     body {
-	background-color: gray;
+	background-color: red;
         width: 35em;
         margin: 0 auto;
         font-family: Tahoma, Verdana, Arial, sans-serif;
